Adding action filters to access articles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Newstand</title>
+    <title>Dulce Newstand</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,100,400' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+
+    <div class="header">
+      <div class="container">
+        <%= link_to(root_path) do %>
+          <h1><span class="dark">Dulce</span>Newstand</h1>
+        <% end %>
+
+        <div class="nav">
+      <% if current_user %> 
+        <ul> 
+          <li><%= current_user.email %></li> 
+          <li><%= link_to "Log out", logout_path, method: "delete" %></li> 
+        </ul> 
+      <% else %> 
+        <ul> 
+          <li><%= link_to "Login", 'login' %></a></li> 
+          <li><%= link_to "Signup", 'signup' %></a></li> 
+        </ul> 
+      <% end %>           
+        </div>
+      </div>
+    </div>
     <%= yield %>
+
   </body>
 </html>
