Adding authorization to destroy items

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,8 +5,12 @@
     <p class="author">by <%= @article.author %></p>
     <p class="article_content"><%= @article.body %></p>
 
-    <!-- Your code here -->
-
+   <% if current_user && current_user.author? %> 
+   <p>
+    <%= link_to "Edit", edit_article_path(@article.id) %> 
+    <%= link_to "Delete", articles_path(@article.id), method: "delete" %> 
+  </p>
+  <% end %> 
     
   </div>
 </div>
